<resources>
    <string name="app_name">Recyclr</string>
    <string name="title_activity_maps">Recyclr</string>
    <string name="login">Login</string>
    <string name="publish_location">Publish Location</string>
    <string name="clear_map">Clear Map</string>
    <string name="logout">Logout</string>
    <string name="userEmail">None</string>
    <string name="google_maps_key">AIzaSyAAYg0aVAVlLt96WA9EG6vojFadDnB3_90</string>
    <string name="none">None</string>
    <string name="query_locations">Find locations</string>
    <string name="query_radius">Location Distance</string>
    <string name="organization">Name of Organization</string>
    <string name="account_type">Type of Account</string>
    <string name="register">Register</string>
    <string-array name="account_types">
        <item>Producer</item>
        <item>Consumer</item>
    </string-array>
    <string-array name="unit_types">
        <item>Kilograms</item>
        <item>Pounds</item>
        <item>Bags</item>
    </string-array>
    <string name="how_much_do_you_want_to_pickup">How much would you like to pick up?</string>
    <string name="has"> has</string>
    <string name="reserve_food">Reserve Food</string>
    <string name="of_food"> of food.</string>
    <string name="remove_point">Remove Point</string>
    <string name="add_food">Add Food</string>
    <string name="add_time">Add  Time</string>
    <string name="return_to_map">Return to Map</string>
    <string name="hours_remaining">Hours Remaining:</string>
    <string name="remaining_food">Remaining Food:</string>
    <string name="reserved_food">Reserved Food</string>
    <string name="view_consumers">View Consumers</string>
    <string name="your_consumers">Your Consumers</string>
</resources>
